[Dark mode] fix toolbar color for the On state
Screenshot: https://i.imgur.com/CNthooh.png
Fixed: chromium:1235220
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3073940
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -219,7 +219,7 @@ it. */
 }
 
 .toolbar-button.toolbar-state-on .toolbar-text {
-  color: var(--color-text-primary);
+  color: var(--color-primary);
 }
 
 :not(.toolbar-render-as-links) .toolbar-button:enabled:hover:not(:active) .toolbar-glyph {
